--- a/style.css
+++ b/style.css
@@ -1,11 +1,57 @@
-.block{
-    background-color: white;
-    border: 1px solid black;
+
+.boardContainer{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 100px;
+    margin-top: 50px;
 }
-.row{
-    display: flex;
+    .boardControls {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+        .boardControls button{
+            all: unset;
+            background-color: #F97068;
+            width: 100px;
+            text-align: center;
+            height: 50px;
+            color: #EDF2EF;
+            font-family:'Courier New', Courier, monospace;
+        }
+        .boardControls button:hover{
+            background-color: #D1D648;
+            color: #212738;
+        }
+
+    .board{
+        width: 800px;
+        height: 800px;
+        border: 10px solid #57C4E5;
+        display: flex;
+        flex-direction:column;
+    }
+        .row{
+            display: flex;
+            flex: 1;
+            width: inherit;
+        }
+            .block{
+                background-color: #EDF2EF;
+                border: 1px solid #212738;
+                flex: 1;
+            }
+        
+body{
+    background-color: #212738;
 }
-.board{
-    width: 500px;
-    height: 500px;
-}
+/* 
+    #57C4E5 azul
+    #212738 negro
+    #F97068 rojo
+    #D1D648 verde
+    #EDF2EF blanco
+*/
