--- a/style.css
+++ b/style.css
@@ -1,59 +1,76 @@
-
-.boardContainer{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 100px;
-    margin-top: 50px;
-}
-    .boardControls {
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
-        align-items: center;
-    }
-
-        .boardControls button{
-            all: unset;
-            background-color: #F97068;
-            width: 100px;
-            text-align: center;
-            height: 50px;
-            color: #EDF2EF;
-            font-family:'Courier New', Courier, monospace;
-        }
-        .boardControls button:hover{
-            background-color: #D1D648;
-            color: #212738;
-        }
-
-    .board{
-        width: 800px;
-        height: 800px;
-        border: 10px solid #57C4E5;
-        display: flex;
-        flex-direction:column;
-    }
-        .row{
-            display: flex;
-            flex: 1;
-            width: inherit;
-        }
-            .block{
-                background-color: #EDF2EF;
-                border: 1px solid #212738;
-                flex: 1;
-            }
-    
-    .colorSelected{
-        border: 10px solid #57C4E5;
-        width: 100px;
-        height: 100px;
-    }
 body{
+    font-family:'Courier New', Courier, monospace;
     background-color: #212738;
 }
+    .boardContainer{
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 100px;
+        margin-top: 50px;
+    }
+        .boardControls {
+            display: flex;
+            flex-direction: column;
+            gap: 50px;
+            align-items: center;
+        }
+
+            .boardControls button{
+                all: unset;
+                background-color: #F97068;
+                width: 100px;
+                text-align: center;
+                height: 50px;
+                color: #EDF2EF;
+            }
+            .boardControls button:hover{
+                background-color: #D1D648;
+                color: #212738;
+            }
+
+        .board{
+            width: 800px;
+            height: 800px;
+            border: 10px solid #57C4E5;
+            display: flex;
+            flex-direction:column;
+        }
+            .row{
+                display: flex;
+                flex: 1;
+                width: inherit;
+            }
+                .block{
+                    background-color: #EDF2EF;
+                    border: 1px solid #212738;
+                    flex: 1;
+                }
+        
+        .colorSelected{
+            border: 10px solid #57C4E5;
+            width: 100px;
+            height: 100px;
+            color: #EDF2EF;
+            font-size: 50px;
+            text-align: center;
+            line-height: 2;
+        }
+
+
+    footer{
+        text-align: center;
+        color: #EDF2EF;
+    }
+        footer a{
+            all: unset;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        footer a:hover{
+            color: #F97068;
+        }
 /* 
     #57C4E5 azul
     #212738 negro
