--- a/style.css
+++ b/style.css
@@ -48,9 +48,11 @@ body{
                 background-color: #EDF2EF;
             }
                 .block{
-                    border: 1px solid #212738;
                     flex: 1;
                 }
+                    .border{
+                        border: 1px solid #212738;
+                    }
         
         .colorSelected{
             border: 10px solid #57C4E5;
@@ -82,3 +84,4 @@ body{
     #D1D648 verde
     #EDF2EF blanco
 */
+/* media query */
